improve _source field deduplication logic and enforce data_classification mapping to match data fields for consistency